--- a/RAG_Quickstart.ipynb
+++ b/RAG_Quickstart.ipynb
@@ -2,9 +2,10 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "4f99856f",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/arnavchopra1864/InfoRetrieval/blob/laksh/RAG_Quickstart.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -95,8 +96,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m806.2/806.2 kB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m36.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -276,26 +277,26 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(prompt)"
-      ],
+      "execution_count": 47,
+      "id": "aiJdtnVfjhdH",
       "metadata": {
-        "id": "aiJdtnVfjhdH",
-        "outputId": "224da402-66cb-4fb7-e155-40b954719c2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aiJdtnVfjhdH",
+        "outputId": "224da402-66cb-4fb7-e155-40b954719c2f"
       },
-      "id": "aiJdtnVfjhdH",
-      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "input_variables=['context', 'question'] messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"))]\n"
           ]
         }
+      ],
+      "source": [
+        "print(prompt)"
       ]
     },
     {
@@ -312,17 +313,17 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'Your monthly rent with concessions will be $100 less than the installment payments specified in the Housing Agreement. The total sale price concession of $1,200 will be applied equally as a credit of $100 against each installment. If the Housing Agreement is terminated early or payments are not made on time, the entire concession must be repaid.'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'Your monthly rent with concessions will be $100 less than the installment payments specified in the Housing Agreement. The total sale price concession of $1,200 will be applied equally as a credit of $100 against each installment. If the Housing Agreement is terminated early or payments are not made on time, the entire concession must be repaid.'"
+            ]
           },
+          "execution_count": 33,
           "metadata": {},
-          "execution_count": 33
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -402,22 +403,22 @@
       "execution_count": 49,
       "id": "207f87a3-effa-4457-b013-6d233bc7a088",
       "metadata": {
-        "id": "207f87a3-effa-4457-b013-6d233bc7a088",
-        "outputId": "5c436c43-4682-44ac-bd99-c30b1be8a836",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "207f87a3-effa-4457-b013-6d233bc7a088",
+        "outputId": "5c436c43-4682-44ac-bd99-c30b1be8a836"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "4405"
             ]
           },
+          "execution_count": 49,
           "metadata": {},
-          "execution_count": 49
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -429,16 +430,16 @@
       "execution_count": 36,
       "id": "52469796-5ce4-4c12-bd2a-a903872dac33",
       "metadata": {
-        "id": "52469796-5ce4-4c12-bd2a-a903872dac33",
-        "outputId": "cbdcf5fc-9138-417a-edc2-da67c8051dae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "52469796-5ce4-4c12-bd2a-a903872dac33",
+        "outputId": "cbdcf5fc-9138-417a-edc2-da67c8051dae"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "HOUSING AGREEMENT\n",
             "This Housing Agreement is entered into on Oct 03, 2023, between Laksh S Gulati (“Resident”) and UH 2100 San Antonio, LLC  (“Owner”)\n",
@@ -512,22 +513,22 @@
       "execution_count": 40,
       "id": "3741eb67-9caf-40f2-a001-62f49349bff5",
       "metadata": {
-        "id": "3741eb67-9caf-40f2-a001-62f49349bff5",
-        "outputId": "88630168-8aa5-41dc-dd73-8278bea0ed90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3741eb67-9caf-40f2-a001-62f49349bff5",
+        "outputId": "88630168-8aa5-41dc-dd73-8278bea0ed90"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "75"
             ]
           },
+          "execution_count": 40,
           "metadata": {},
-          "execution_count": 40
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -539,22 +540,22 @@
       "execution_count": 41,
       "id": "f868d0e5-5670-4d54-b562-f50265e907f4",
       "metadata": {
-        "id": "f868d0e5-5670-4d54-b562-f50265e907f4",
-        "outputId": "9bc994b9-7ba1-4f3b-eb30-3416765c17c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f868d0e5-5670-4d54-b562-f50265e907f4",
+        "outputId": "9bc994b9-7ba1-4f3b-eb30-3416765c17c2"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "882"
             ]
           },
+          "execution_count": 41,
           "metadata": {},
-          "execution_count": 41
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -566,16 +567,16 @@
       "execution_count": 45,
       "id": "5c9e5f27-c8e3-4ca7-8a8e-45c5de2901cc",
       "metadata": {
-        "id": "5c9e5f27-c8e3-4ca7-8a8e-45c5de2901cc",
-        "outputId": "27319d5c-6fe6-4641-d57b-ca8d6287f9a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5c9e5f27-c8e3-4ca7-8a8e-45c5de2901cc",
+        "outputId": "27319d5c-6fe6-4641-d57b-ca8d6287f9a9"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'source': '/content/ION lease agreement.pdf', 'page': 0, 'start_index': 0}\n",
             "{'source': '/content/ION lease agreement.pdf', 'page': 0, 'start_index': 737}\n",
@@ -778,22 +779,22 @@
       "execution_count": 53,
       "id": "8684291d-0f5e-453a-8d3e-ff9feea765d0",
       "metadata": {
-        "id": "8684291d-0f5e-453a-8d3e-ff9feea765d0",
-        "outputId": "d8714588-4eed-4659-beb2-ec2acd9abdfb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8684291d-0f5e-453a-8d3e-ff9feea765d0",
+        "outputId": "d8714588-4eed-4659-beb2-ec2acd9abdfb"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "6"
             ]
           },
+          "execution_count": 53,
           "metadata": {},
-          "execution_count": 53
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -805,16 +806,16 @@
       "execution_count": 58,
       "id": "9a5dc074-816d-409a-b005-ab4eddfd76af",
       "metadata": {
-        "id": "9a5dc074-816d-409a-b005-ab4eddfd76af",
-        "outputId": "3e83e331-c199-4d7e-e579-1524ca4d4c87",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9a5dc074-816d-409a-b005-ab4eddfd76af",
+        "outputId": "3e83e331-c199-4d7e-e579-1524ca4d4c87"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'page': 1, 'source': '/content/ION lease agreement.pdf'}\n",
             "{'page': 1, 'source': '/content/ION lease agreement.pdf'}\n",
@@ -1141,8 +1142,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
