removed unnecessary imports

--- a/llama.ipynb
+++ b/llama.ipynb
@@ -2,21 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os.path\n",
     "from llama_index.core import (\n",
     "    VectorStoreIndex,\n",
     "    SimpleDirectoryReader,\n",
-    "    StorageContext,\n",
-    "    load_index_from_storage,\n",
-    "    PromptTemplate\n",
     ")\n",
     "from llama_index.llms.openai import OpenAI\n",
-    "from llama_index.core.llms import ChatMessage, MessageRole\n",
-    "from llama_index.core.chat_engine import CondenseQuestionChatEngine\n",
     "from typing import List\n",
     "from pydantic import BaseModel\n",
     "\n",
@@ -25,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,18 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No, there is no evidence to suggest that sleeping less has positive effects. On the contrary, the data indicates that sleep deprivation or restriction can negatively impact performance in various tasks, reaction time, learning, executive function, and subjective well-being. It also highlights that extending sleep duration can improve performance in certain tasks.\n",
+      "No\n",
       "\n",
       "However, onenight of total sleep deprivation was not found to significantly affect lifting performance in male collegiate weightlifters de-spite worse ratings of sleepiness, fatigue, confusion, mood,and affect (4). It has been suggested that sleep loss may have a smaller effect on performance during shorter, maximal events when the effects of increased perceived exertion or muscleglycogen deficits would be less impactful than during prolonged submaximal or progressive efforts (14,28). The available studies are small and have used different methods to measure strengthand sprint performance, however, suggesting that further re- search is needed to better define this relationship.\n",
-      "Sleep deprivation and even minimal amounts of sleep re- striction have been consistently shown to impair accuracy inathletic events, whereas accuracy has been found toimprove after sleep extension. Compared with after a full night’s sleep, dart throwing accuracy was found to decrease significantly after a single night of 4 to 5 h of sleep (10).Similarly, a single night of 5 h of sleep in tennis players was associated with a decrease in serving accuracy of up to 53% compared with after a normal night’s sleep (35). A study of29 adolescent student-athletes found decreased sleep time on weekdays than weekends, with accumulated sleep debt through the week that was associated with worsening re-action times by the end of the week (44).\n",
-      "The capacity to learn is essential to athletic development and performance, and sleep is critical for memory consoli-dation. This has important implications for tactical develop- ment in athletic training and may be particularly important among youth and collegiate athletes who must concomitantlyattend to both academic and athletic demands (47). For ex- ample, a study of adolescent male soccer players identified a steeper learning curve for the performance of sport-specifictasks after habitual sleep than after a period of sleep depri- vation (29). Although there are large interindividual differ- ences in the effects of sleep loss on executive function, sleepdeprivation is associated with cognitive lapses and may sig-nificantly undermine tasks that require flexible thinking. One night of sleep deprivation also has been found to have signifi- cant negative effects on inhibi tory control (36), potentially undermining decision-making duri ng athletic competition.\n"
+      "Sleep deprivation and even minimal amounts of sleep re- striction have been consistently shown to impair accuracy inathletic events, whereas accuracy has been found toimprove after sleep extension. Compared with after a full night’s sleep, dart throwing accuracy was found to decrease significantly after a single night of 4 to 5 h of sleep (10).Similarly, a single night of 5 h of sleep in tennis players was associated with a decrease in serving accuracy of up to 53% compared with after a normal night’s sleep (35).\n",
+      "The capacity to learn is essential to athletic development and performance, and sleep is critical for memory consoli-dation. This has important implications for tactical develop- ment in athletic training and may be particularly important among youth and collegiate athletes who must concomitantlyattend to both academic and athletic demands (47). For ex- ample, a study of adolescent male soccer players identified a steeper learning curve for the performance of sport-specifictasks after habitual sleep than after a period of sleep depri- vation (29).\n"
      ]
     }
    ],
