--- a/llama_index_test.ipynb
+++ b/llama_index_test.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: llama-index in c:\\users\\arnav\\anaconda3\\lib\\site-packages (0.10.12)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Requirement already satisfied: llama-index in c:\\users\\arnav\\anaconda3\\lib\\site-packages (0.10.12)\n",
       "Requirement already satisfied: llama-index-agent-openai<0.2.0,>=0.1.4 in c:\\users\\arnav\\anaconda3\\lib\\site-packages (from llama-index) (0.1.5)\n",
       "Requirement already satisfied: llama-index-cli<0.2.0,>=0.1.2 in c:\\users\\arnav\\anaconda3\\lib\\site-packages (from llama-index) (0.1.5)\n",
       "Requirement already satisfied: llama-index-core<0.11.0,>=0.10.12 in c:\\users\\arnav\\anaconda3\\lib\\site-packages (from llama-index) (0.10.12)\n",
@@ -138,7 +137,8 @@
       "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\users\\arnav\\anaconda3\\lib\\site-packages (from google-auth>=1.0.1->kubernetes>=28.1.0->chromadb<0.5.0,>=0.4.22->llama-index-vector-stores-chroma<0.2.0,>=0.1.1->llama-index-cli<0.2.0,>=0.1.2->llama-index) (4.9)\n",
       "Requirement already satisfied: pyreadline3 in c:\\users\\arnav\\anaconda3\\lib\\site-packages (from humanfriendly>=9.1->coloredlogs->onnxruntime<2.0.0,>=1.17.0->llama-index-vector-stores-chroma<0.2.0,>=0.1.1->llama-index-cli<0.2.0,>=0.1.2->llama-index) (3.4.1)\n",
       "Requirement already satisfied: zipp>=0.5 in c:\\users\\arnav\\anaconda3\\lib\\site-packages (from importlib-metadata<7.0,>=6.0->opentelemetry-api>=1.2.0->chromadb<0.5.0,>=0.4.22->llama-index-vector-stores-chroma<0.2.0,>=0.1.1->llama-index-cli<0.2.0,>=0.1.2->llama-index) (3.11.0)\n",
-      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in c:\\users\\arnav\\anaconda3\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth>=1.0.1->kubernetes>=28.1.0->chromadb<0.5.0,>=0.4.22->llama-index-vector-stores-chroma<0.2.0,>=0.1.1->llama-index-cli<0.2.0,>=0.1.2->llama-index) (0.4.8)\n"
+      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in c:\\users\\arnav\\anaconda3\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth>=1.0.1->kubernetes>=28.1.0->chromadb<0.5.0,>=0.4.22->llama-index-vector-stores-chroma<0.2.0,>=0.1.1->llama-index-cli<0.2.0,>=0.1.2->llama-index) (0.4.8)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpt35 = OpenAI()"
+    "gpt4 = OpenAI(model=\"gpt-4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,19 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "queryengine = index.as_query_engine()\n",
-    "chatengine = index.as_chat_engine()\n",
-    "\n",
-    "# qe2 = summary.as_query_engine()"
+    "# queryengine = index.as_query_engine(llm=gpt4)\n",
+    "queryengine = index.as_retriever(llm=gpt4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,70 +262,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qe_resp = queryengine.query(query).response\n",
-    "# qe2_resp = qe2.query(query).response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ce_resp = chatengine.query(query).response "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Tumor-immune interactions involve a complex interplay between the tumor and the immune system. Somatic alterations in tumors, such as driver mutations, can impact immune responses by altering pathways that affect immune cells. Tumor-specific neoantigens are key targets of anti-tumor immunity and can influence the response to immune checkpoint inhibitors. The immune landscape within the tumor microenvironment is regulated by various immune cells, such as mast cells, neutrophils, CD4 T cells, NK cells, B cells, eosinophils, macrophages, and CD8 T cells, which communicate through specific receptor-ligand interactions. Transcription factors and miRNAs also play a role in regulating immune cell infiltration, with therapies targeting these regulatory factors potentially having a broader impact across different tumor types. It is important to consider the complexity of tumor-immune interactions and the need for further research to understand the functional aspects of these associations.\\n\\nDocuments supporting the explanation of tumor-immune interactions can be found in \"data\\\\cancer_paper.pdf\" on page 824 and in \"data\\\\cancer_paper_2.pdf\" on page 147.'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ce_resp"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query2 = \"explain the differences between these two answers to the question: \" + query + \". What are the pros and cons of both answers? Answer 1: \" + qe_resp + \" Answer 2: \" + ce_resp"
+    "# qe_resp = queryengine.query(query).response\n",
+    "# qe2_resp = qe2.query(query).response\n",
+    "qe_resp = queryengine.retrieve(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Answer 1 focuses on the diverse factors influencing tumor-immune interactions in the context of immunosurveillance, emphasizing the importance of assessing various immunologic components across different tumor models. It highlights the role of different T cell subsets, specifically /H9251/H9252T cells and /H9253/H9254T cells, in tumor formation and regulation, as supported by information on pages 139 and 824.\\n\\nAnswer 2 delves into the intricate interplay between tumors and the immune system, discussing how somatic alterations like driver mutations can impact immune responses by altering pathways affecting immune cells. It also mentions the significance of tumor-specific neoantigens in anti-tumor immunity and the regulation of the immune landscape within the tumor microenvironment by various immune cells and their interactions through receptor-ligand pairs. This explanation is supported by details found on pages 824 and 147.\\n\\nPros of Answer 1: \\n- Provides a detailed overview of the multivariable process of tumor-immune interactions in immunosurveillance.\\n- Emphasizes the need to consider various factors influencing tumor development and the role of different T cell subsets.\\n\\nCons of Answer 1:\\n- May lack depth in discussing specific molecular mechanisms and immune cell interactions within the tumor microenvironment.\\n- Focuses more on general aspects of immunosurveillance rather than specific molecular pathways.\\n\\nPros of Answer 2:\\n- Offers insights into how somatic alterations in tumors and tumor-specific neoantigens impact immune responses.\\n- Discusses the role of different immune cells and their communication within the tumor microenvironment.\\n\\nCons of Answer 2:\\n- Might not provide as comprehensive a view of the diverse factors influencing tumor-immune interactions in immunosurveillance.\\n- Could benefit from more emphasis on the specific roles of different T cell subsets in tumor regulation.'"
+       "'Specifically, cancer immunosur-against tumor formation was found to be more depen-\\nveillance appears to be a multivariable process in whichdent on the action of /H9253/H9254T cells than /H9251/H9252T cells. Whereas\\nimmunologic responses are influenced by a tumor’s cel-FVB strain TCR /H9254/H11002//H11002mice formed significantly more\\nlular origin, mode of transformation, anatomic location, DMBA/TPA tumors than wild-type FVB controls, FVB\\nstromal response, cytokine production profile, and in- strain TCR /H9252/H11002//H11002did not (Girardi et al., 2001, 2003). How-\\nherent immunogenicity. Thus, it remains critical to ever, TCR /H9252/H11002//H11002/H11003/H9254/H11002//H11002mice were significantly more sus-\\nassess the effects of a wide range of immunologic ceptible to DMBA/TPA carcinogenesis than singly-defi-\\ncomponents on tumor development in many different cient TCR /H9254/H11002//H11002mice (Girardi et al., 2003), revealing a\\nmodels—both chemically induced and spontaneous— host-protective role for /H9251/H9252T cells in the setting of /H9253/H9254\\nto determine whether the immunosurveillance of all T cell deficiency. Interestingly, in the same study TCR\\ncancer-susceptible tissues of the body is globally similar /H9254/H11002//H11002mice exhibited the highest ratio of carcinomas to\\npapillomas, suggesting that /H9253/H9254T cells regulate the pro- or locally distinct.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "queryengine.query(query2).response"
+    "qe_resp[0].text"
    ]
   },
   {
